Split apart compiler and api.